--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <!--
     Autor   :   Erick Cruz
-    Correo  :   mail22master@gmail.com
-    Blog    :   
-    Github  :   
+    Blog    :   https://programacion22.wordpress.com/2017/08/07/jquery-animate-animaciones-modificando-estilos-css/
+    Github  :   https://github.com/Erick22Cruz/JS_Animation_Demo
     Fecha   :   08-06-2017, 03:52:29 PM
 -->
 <html>
